--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
-    "semantic-ui-react": "^0.67.1"
+    "semantic-ui-react": "^0.67.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
